// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gogen should generate \`basic\` 1`] = `
Array [
  ".eslintrc",
  ".gitignore",
  "README.md",
  "index.js",
  "package.json",
  "subpackage/.gitignore",
  "subpackage/package.json",
]
`;

exports[`gogen should generate \`create-gogen\` 1`] = `
Array [
  ".gitignore",
  ".gogenrc.js",
  "package.json",
  "template/gitignore",
  "template/index.js",
  "template/package.json",
]
`;

exports[`gogen should generate \`with-ejs\` 1`] = `
Array [
  ".gitignore",
  "README.md",
  "index.js",
  "package.json",
]
`;

exports[`gogen should generate \`with-prompts\` 1`] = `
Array [
  ".eslintrc",
  ".gitignore",
  "index.js",
  "package.json",
]
`;

exports[`gogen should generate \`without-gogenrc\` 1`] = `
Array [
  ".eslintrc",
  ".gitignore",
  "index.js",
  "package.json",
]
`;
